--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Halogen7 Template</title>
   </head>
   <body>
-    <script src="./index.js" type="module"></script>
+    <script src="./js/client.js" type="module"></script>
   </body>
 </html>
