game is functional

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Halogen7 Template</title>
+    <title>Purs-Worldle</title>
+    <link rel="stylesheet" href="/public/style.css"></script>
   </head>
   <body>
-    <script src="./js/client.js" type="module"></script>
+    <script src="/js/client.js" type="module"></script>
   </body>
 </html>
